--- a/contact.html
+++ b/contact.html
@@ -1,82 +1,110 @@
 <!--Bootstrap Portfolio Homework #2b
 	Created 11/9/17
-	Last updated 11/9/17
+	Last updated 11/10/17
 	Written by: Steve Harold-->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Contact Info</title>
-<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href= "https://bootswatch.com/3/darkly/bootstrap.min.css">
-
-<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	
-	<link href="assets/images/contact.ico" rel="icon" type="image/x-icon" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact</title>
+  <link rel="stylesheet"
+  href="https://bootswatch.com/3/darkly/bootstrap.min.css">
+  <link rel="stylesheet"
+  href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  
+  <script type="text/javascript"
+  src="http://code.jquery.com/jquery.min.js"></script>
+  <script
+  src="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-
 <body>
-	
-	<!--header-->
-	
-	<div class="container">
-  		<div class="header">
-  			<h1 class="pull-left">Steve Harold</h1>
-    		<ul class="nav nav-pills pull-right" style="padding-top: 20px;">
-      			<li><a href="index2.html">About</a></li>
-      			<li><a href="portfolio.html">Portfolio</a></li>
-      			<li class="active"><a href="contact.html">Contact</a></li>
-    		</ul>
-  		</div>
-  	</div>
+  <nav class="navbar navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Steve Harold</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="col-md-4 nav navbar-nav navbar-right">
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!--about me-->
 
-	<!--body of webpage-->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-xs-12" id="contact">
+        <h2>Contact Me</h2>
+        <form class="form-horizontal">
+		  <div class="form-group">
+		    <label class="control-label col-sm-2" for="name">Name:</label>
+		    <div class="col-sm-10">
+		      <input type="name" class="form-control" id="name" placeholder="John Doe" required="">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label class="control-label col-sm-2" for="email">Email:</label>
+		    <div class="col-sm-10"> 
+		      <input type="email" class="form-control" id="email" placeholder="Enter email" required="">
+		    </div>
+		  </div>		  
+		  <div class="form-group">
+  			<label class= "control-label col-sm-2" for="message">Message:</label>
+  			<div class="col-sm-10">
+ 				<textarea class="form-control" rows="10" id="comment" required=""></textarea>
+ 			</div>
+		  </div>
+		  <button type="submit" class="btn btn-default btn-change7">Submit</button>
+		</form>
+	  </div>
+      <!--blank div-->
 
-	<div>
+      <div class="col-md-1">
+      </div>
 
-	<!--main content-->
-		
-		<div>
-			<h2>Contact</h2>
-			<form>
-				Name
-				<br>
-				<input type="text" placeholder="John Doe" size="35" required>
-				<br>
-		
-				Email
-				<br>
-				<input type="email" placeholder="JohnDoe@gmail.com" size="35" required>
-				<br>
-		
-				Message
-				<br>
-				<textarea placeholder="Reach out with a short message..." type="text" style="height: 200px; width: 590px; padding-left:10px;" required></textarea>
-				<br>
+      <!--connect with me-->
 
-				<input id="submit" type="submit" value="Submit">
-			</form>
-		</div>
+      <div class="col-md-4 col-xs-12 pull-right" id="connect">
+        <div class="row">
+          <h3>Connect with Me</h3>
+          <div class="col-md-4 col-xs-4">
+            <a href="http://www.github.com/stehar14" target="_blank"><img class="img-responsive" src="assets/images/github.png" alt="My Github Page"></a>
+          </div>
+          <div class="col-md-4 col-xs-4">
+            <a href="http://www.linkedin.com/in/steven-harold/" target="_blank"><img class="img-responsive" src="assets/images/linkedin.png" alt="My Linkedin Page"></a>
+          </div>
+          <div class="col-md-4 col-xs-4">
+            <a href="https://stackexchange.com/users/11734634/s-harold" target="_blank"><img class="img-responsive" src="assets/images/stack.png" alt="My Stack Overflow Page"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	<!--Contact-->
+  <!--footer-->
 
-		<div>
-			<h3>Connect with Me</h3>
-			<a href="http://www.github.com/stehar14" target="_blank"><img src="assets/images/github.png" alt="My Github Page"></a>
-			<a href="http://www.linkedin.com/in/steven-harold/" target="_blank"><img src="assets/images/linkedin.png" alt="My Linkedin Page"></a>
-			<a href="https://stackexchange.com/users/11734634/s-harold" target="_blank"><img src="assets/images/stack.png" alt="My Stack Overflow Page"></a>
-		</div>
-	</div>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; Copyright 2017 Steve Harold</p>
+    </div>
+  </footer>
+  
+  <!--jquery-->
 
-	<!--footer-->
-
-	<footer>
-		<p>Copyright &copy; 2017 Steve Harold</p>
-	</footer>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
