--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--Bootstrap Portfolio Homework #2b
+  Created 11/9/17
+  Last updated 11/10/17
+  Written by: Steve Harold-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,56 +20,76 @@
   src="http://code.jquery.com/jquery.min.js"></script>
   <script
   src="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Steve Harold</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="col-md-4 nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+</head>
+<body>
+  <nav class="navbar navbar-static-top">
     <div class="container">
-      <div class="row">
-        <div class="col-md-7 col-xs-12" id="about">
-          <h2>About Me</h2>
-          <img class="pull-left" src="http://via.placeholder.com/300x300">
-          <p>Steve Harold is 26 years old and lives with his girlfriend in East Windsor, NJ. He is a dedicated, persistent, and hardworking individual who is motivated by solving problems and strives to bring a positive presence to his daily life. He has his degree in Psychology and currently works at Academy Learning Center in Monroe Township, NJ as a teacher of students with learning disabilities who require educational or behavioral supports.</p>
-          <p>Steve's ultimate goal is to learn to be an efficient and effective Full Stack Developer over the coming months and to use this experience to transition into a technology-based career. He hopes to have the opportunity to make a difference with a company with a positive environment that values ability and perserverance in its employees. Additionally, Steve hopes to be able to work on personal projects which could benefit from the application of knowledge of website development.</p>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Steve Harold</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="col-md-4 nav navbar-nav navbar-right">
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!--about me-->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-xs-12" id="about">
+        <h2>About Me</h2>
+        <!--<img class="pull-left" src="assets/images/me.jpg">-->
+        <div id="me">
         </div>
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-4 col-xs-12 pull-right" id="connect">
-          <div class="row">
-            <h3>Connect with Me</h3>
-            <div class="col-md-4 col-xs-4">
-              <a href="http://www.github.com/stehar14" target="_blank"><img src="assets/images/github.png" alt="My Github Page"></a>
-            </div>
-            <div class="col-md-4 col-xs-4">
-              <a href="http://www.linkedin.com/in/steven-harold/" target="_blank"><img src="assets/images/linkedin.png" alt="My Linkedin Page"></a>
-            </div>
-            <div class="col-md-4 col-xs-4">
-              <a href="https://stackexchange.com/users/11734634/s-harold" target="_blank"><img src="assets/images/stack.png" alt="My Stack Overflow Page"></a>
-            </div>
+        <p>Steve Harold is 26 years old and lives with his girlfriend in East Windsor, NJ. He is a dedicated, persistent, and hardworking individual who is motivated by solving problems and strives to bring a positive presence to his daily life. He has his degree in Psychology and currently works at Academy Learning Center in Monroe Township, NJ as a teacher of students with learning disabilities who require educational or behavioral supports.</p>
+        <p>Steve's ultimate goal is to learn to be an efficient and effective Full Stack Developer over the coming months and to use this experience to transition into a technology-based career. He hopes to have the opportunity to make a difference with a company with a positive environment that values ability and perserverance in its employees. Additionally, Steve hopes to be able to work on personal projects which could benefit from the application of knowledge of website development.</p>
+      </div>
+
+      <!--blank div-->
+
+      <div class="col-md-1">
+      </div>
+
+      <!--connect with me-->
+
+      <div class="col-md-4 col-xs-12 pull-right" id="connect">
+        <div class="row">
+          <h3>Connect with Me</h3>
+          <div class="col-md-4 col-xs-4">
+            <a href="http://www.github.com/stehar14" target="_blank"><img class="img-responsive" src="assets/images/github.png" alt="My Github Page"></a>
+          </div>
+          <div class="col-md-4 col-xs-4">
+            <a href="http://www.linkedin.com/in/steven-harold/" target="_blank"><img class="img-responsive" src="assets/images/linkedin.png" alt="My Linkedin Page"></a>
+          </div>
+          <div class="col-md-4 col-xs-4">
+            <a href="https://stackexchange.com/users/11734634/s-harold" target="_blank"><img class="img-responsive" src="assets/images/stack.png" alt="My Stack Overflow Page"></a>
           </div>
         </div>
       </div>
     </div>
-    <h1>Hello, world!</h1>
+  </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+  <!--footer-->
+
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; Copyright 2017 Steve Harold</p>
+    </div>
+  </footer>
+  
+  <!--jquery-->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+</body>
 </html>
