--- a/portfolio.html
+++ b/portfolio.html
@@ -42,17 +42,39 @@
     </div>
   </nav>
   
-  <!--about me-->
+  <!--portfolio-->
 
   <div class="container">
     <div class="row">
-      <div class="col-md-7 col-xs-12" id="about">
-        <h2>About Me</h2>
-        <!--<img class="pull-left" src="assets/images/me.jpg">-->
-        <div id="me">
-        </div>
-        <p>Steve Harold is 26 years old and lives with his girlfriend in East Windsor, NJ. He is a dedicated, persistent, and hardworking individual who is motivated by solving problems and strives to bring a positive presence to his daily life. He has his degree in Psychology and currently works at Academy Learning Center in Monroe Township, NJ as a teacher of students with learning disabilities who require educational or behavioral supports.</p>
-        <p>Steve's ultimate goal is to learn to be an efficient and effective Full Stack Developer over the coming months and to use this experience to transition into a technology-based career. He hopes to have the opportunity to make a difference with a company with a positive environment that values ability and perserverance in its employees. Additionally, Steve hopes to be able to work on personal projects which could benefit from the application of knowledge of website development.</p>
+      <div class="col-md-7 col-xs-12" id="portfolio">
+        <h2>My Portfolio</h2>
+        <div id="port-images">
+		  <div id="first">	
+			<a href="#" target="_blank"> <img class="img-responsive" src= "assets/images/website.jpg">
+				<h4>My First Website</h4>
+			</a>
+		  </div>	
+		  <div id="second">
+			<a href="#" target="_blank"> <img class="img-responsive" src= "assets/images/blog.jpg">
+				<h4>Blog</h4>
+			</a>
+		  </div>	
+          <div id="third">
+			<a href="#" target="_blank"> <img class="img-responsive" src= "assets/images/movie.jpg">
+				<h4>Movie Review Site</h4>
+			</a>
+		  </div>	
+          <div id="fourth">
+			<a href="#" target="_blank"> <img class="img-responsive" src= "assets/images/games.jpg">
+				<h4>Flash Game Site</h4>
+			</a>
+		  </div>	
+          <div id="fifth">
+			<a href="#" target="_blank"> <img class="img-responsive" src= "assets/images/news.jpg">
+				<h4>News Site</h4>
+			</a>
+		  </div>
+		</div>
       </div>
 
       <!--blank div-->
