--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 		  <div class="form-group">
   			<label class= "control-label col-sm-2" for="message">Message:</label>
   			<div class="col-sm-10">
- 				<textarea class="form-control" rows="10" id="comment" required=""></textarea>
+ 				<textarea class="form-control" rows="10" id="comment" placeholder="Enter your message here..." required=""></textarea>
  			</div>
 		  </div>
 		  <button type="submit" class="btn btn-default btn-change7">Submit</button>
