--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
   <title>Contact</title>
   <link rel="stylesheet"
   href="https://bootswatch.com/3/darkly/bootstrap.min.css">
-  <link rel="stylesheet"
-  href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+  
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -97,10 +96,10 @@
     </div>
   </footer>
   
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script type="text/javascript"
-  src="http://code.jquery.com/jquery.min.js"></script>
-  <script
-  src="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
