--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
   <title>Contact</title>
   <link rel="stylesheet"
   href="https://bootswatch.com/3/darkly/bootstrap.min.css">
-  
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="assets/images/contact.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
   <nav class="navbar navbar-static-top">
