--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Portfolio</title>
   <link rel="stylesheet"
-  href="https://bootswatch.com/3/darkly/bootstrap.min.css">
-  
+  href="https://bootswatch.com/3/darkly/bootstrap.min.css">  
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="assets/images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
   <nav class="navbar navbar-static-top">
